# ArUco-tag-image-detection-using-ROS2-and-Gazebo-in-a-mobile-robot

./: README.md  aruco_detector.py  display.launch.py  env.sdf  robot_description.sdf  setup.py
open_robot/src/looking_robot/: package.xml
open_robot/src/looking_robot/config/: bridge_config.yaml
open_robot/src/looking_robot/env/: env.sdf
open_robot/src/looking_robot/launch/: display.launch.py
open_robot/src/looking_robot/looking_robot/: aruco_detector.py
open_robot/src/looking_robot/robot_description/: robot_description.sdf
open_robot/src/looking_robot/rviz/: config.rviz
