<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>looking_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vivek@todo.todo">vivek</maintainer>
  <license>TODO: License declaration</license>


    <!-- Build tool (Python-based package) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Gazebo dependencies -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Robot description handling -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional: joint states if you simulate sensors -->


  <exec_depend>rviz</exec_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- Optional: rviz for visualization -->
  <exec_depend>rviz2</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>xterm</exec_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
